# Ground-Side-Telemetry

./: .gitignore  GUI_NEW.pro  Json_Functions.cpp  Json_Functions.h  PilotManager.pro  PilotManager.pro.qtds  README.md  decoder.cpp  decoder.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pilotmanager.cpp  pilotmanager.h  pilotmanager.ui  serial.pro.user.12ab8a0  serialclass.cpp  serialclass.h  test_pogi.json
Mavlink2/: Airside_Functions.cpp  Airside_Functions.hpp  CMakeLists.txt  Groundside_Functions.cpp  Groundside_Functions.hpp
SerialEncoding/: serial.pro
TX/: GUI_NEW.pro  form.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
TX/Mavlink/: Airside_Functions.cpp  Airside_Functions.hpp  README.md
TX/Mavlink/Mavlink2_lib/: mavlink_types.h
src/: main.cpp
src/json_functions/: Json_Functions.cpp
src/mainwindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/serial/: serial.cpp  serial.h
tests/: testing.cpp  tests.cpp  tests.h
